Opened 19 years ago
Closed 17 years ago
#669 closed bug (fixed)
"Open with" 'No supporting apps' is wrong, Diskprobe or similar should be listed
Reported by: | Owned by: | axeld | |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications | Version: | |
Keywords: | Cc: | diver | |
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
I tried to view the Terminal_settings file (or whatever it's called) in /boot/home/config/settings with the "Open With" right click menu in the Tracker. It displayed 'No supporting apps'Shouldn't al least Diskprobe be listed? I could open it with StyledEdit IIRC.
Change History (20)
comment:1 by , 19 years ago
Resolution: | → invalid |
---|
comment:2 by , 19 years ago
comment:3 by , 19 years ago
Status: | new → closed |
---|
comment:4 by , 19 years ago
(In reply to comment #1)
we might add the types for apps that come with the image at a later time,
though
Sounds like a good idea. At least i think R5 distro does it.
comment:5 by , 19 years ago
After starting DiskProbe once, it should appear in this menu (and sure does over here).
Not here Haiku revision 17782 9th May. Tried even opening the same file with diskprobe still doesn't appear in the 'open with'-list. BTW dragging the file's icon on the first diskprobe 'dialog' window (the one with the buttons Probe file and Probe disk) will open the file (nifty feature! can't remember if R5 does it too, I believe not) but selecting "Probe file" and dragging the file's icon to the tracker window won't open the folder with this file.
comment:6 by , 19 years ago
Resolution: | invalid |
---|
comment:7 by , 19 years ago
Status: | closed → reopened |
---|
comment:9 by , 19 years ago
Maybe it's another problem of the Linux build, as I can't reproduce it over here. However, I can reproduce that nothing happens when you drop the icon over the file panel - but that's reproducible with any file panel and any file.
Do you have the possibility to try a BeOS based build?
comment:10 by , 19 years ago
FWIW the "can't drop files into file panels" bug is fixed since hrev17839.
comment:11 by , 19 years ago
Sorry, you're right june 9th rev 17782, I download Haiku pre-build always from Sikosis. Which version shall I use (url's?)
comment:13 by , 19 years ago
Cc: | added |
---|
comment:15 by , 19 years ago
Axel explained that after starting DiskProbe once, it should appear in the menu. Paul, should we close this bug ?
Axel, should we add the types for apps we bundle, maybe the build can help to do this ?
comment:16 by , 19 years ago
That would definitely be a good idea, although I'm not sure if we manage to do this automatically. At least a helper utility that reads out the attributes and writes the MIME data file would be great.
comment:17 by , 19 years ago
I just tested it with build 18081 and it works. Haven't started DiskProbe yet.
Can / Shall I close it?
comment:18 by , 17 years ago
Description: | modified (diff) |
---|---|
Platform: | → All |
Final call. Can this be closed?
comment:20 by , 17 years ago
Resolution: | → fixed |
---|---|
Status: | reopened → closed |
Fixed through the mime_update.sh post install script.
To have an application listed in the "Open With" menu, it must be a known app - it must have been started at least once (we might add the types for apps that come with the image at a later time, though). After starting DiskProbe once, it should appear in this menu (and sure does over here).