* Dropped messages come in a _MESSAGE_DROPPED_ "packet", and were unpacked much too   late, in DispatchMessage(), working around all eventually installed message filters.   This fixes the odd "cannot drop files into file panel" bug mentioned in bug #669. * They are now handled in _DetermineTarget() and _SanitizeMessage(). * _SanitizeMessage() is now called earlier, so that no user code can see them before;   even though this might give you wrong MouseDown() coordinates in combination with   a redirecting message filter, I think that's exactly what would happen in this   situation under R5 as well.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@17839 a95241bf-73f2-0310-859d-f6bbb57e9c96